style in css for img

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
       <section>
         <h3>Objective</h3>
-        <p>A software engineer position.</p>
+        <p>To change the world one line of code at a time.</p>
       </section>
 
       <section>
@@ -72,7 +72,7 @@
 
     <footer>
     <h2>More about me...</h2>
-            <img src="./assets/innout.png" alt="Diana's picture" width="300" height="320"/>
+            <img src="./assets/innout.png" id="profile" alt="Diana's picture"/>
             <nav>
                 <a href="https://github.com/DianaBarrios">GitHub</a> |
                 <a href="https://www.linkedin.com/in/diana-barrios/">LinkedIn</a> |
