--- a/index.html
+++ b/index.html
@@ -28,18 +28,31 @@
         
         <article>
             <h5 class="date">February 2020 - present</h5>
-            <p>Software Engineer, <span class="place" style="color:purple">Emissary.</span> Web development.</p>
+            <p>Software Engineer, <span class="place" style="color:purple">Emissary.</span> Web Development.</p>
+            <ul class="description">
+                <li>Working with: JavaScript, Flexbox, CSS Grid, JQuery</li>
+            </ul>
         </article>
 
 
         <article>
             <h5 class="date">May 2019 - July 2019</h5>
             <p>Software Engineer, <span class="place" style="color:darkblue">Digital Product School.</span> Web Development.</p>
+            <ul class="description">
+                <li>Designed, developed and deployed the web application using React, NodeJS and Cloud Services</li>
+                <li>Integrated sending emails to users using MailChimp API and Nodemailer</li>
+                <li>Collaborated with the interaction designer and product managers in my team on the journey from the problem validation with user research and testing to the product in a fast-paced agile methodology</li>  
+            </ul>
         </article>
 
         <article>
             <h5 class="date">Septemner 2018 - January 2019</h5>
             <p>Software Engineer Intern, <span class="place" style="color:yellowgreen">Codigo Semilla.</span> Web Development.</p>
+             <ul class="description">
+                <li>Built most of the Front-End components of the landing page of the company’s Ruby on Rails web application with HTML, CSS and Bootstrap</li>
+                <li>Designed and wrote test scripts for the development of a new app in Ruby on Rails utilizing test-driven development with Rspec</li>
+                <li>Contributed in continuous integration and deployment by making pull request using Git and GitHub</li>  
+            </ul>
         </article>
 
       </section>
@@ -54,7 +67,7 @@
         
         <div>
             <h5 class="date">2013-2016</h5>
-            <p> International Baccalaurate from <span class="place"  style="color:orange">CETYS Universidad</span></p>
+            <p> International Baccalaureate Diploma from <span class="place"  style="color:orange">CETYS Universidad</span></p>
         </div>
 
       </section>
@@ -62,6 +75,7 @@
       <section>
         <h3>Interests</h3>
         <ul>
+            <li>Travel</li>
             <li>Fashion</li>
             <li>Cinema</li>
             <li>History</li>
