--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
         <article>
             <h5 class="date">February 2020 - present</h5>
-            <p>Software Engineer, <span class="place" style="color:purple">Emissary.</span> Web Development.</p>
+            <p>Software Engineer, <span class="place" style="color:purple">Emissary.</span> Monterrey, Nuevo Leon, Mexico.</p>
             <ul class="description">
                 <li>Working with: JavaScript, Flexbox, CSS Grid, JQuery</li>
             </ul>
@@ -37,7 +37,7 @@
 
         <article>
             <h5 class="date">May 2019 - July 2019</h5>
-            <p>Software Engineer, <span class="place" style="color:darkblue">Digital Product School.</span> Web Development.</p>
+            <p>Software Engineer, <span class="place" style="color:darkblue">Digital Product School.</span> Munich, Bavaria, Germany.</p>
             <ul class="description">
                 <li>Designed, developed and deployed the web application using React, NodeJS and Cloud Services</li>
                 <li>Integrated sending emails to users using MailChimp API and Nodemailer</li>
@@ -47,7 +47,7 @@
 
         <article>
             <h5 class="date">Septemner 2018 - January 2019</h5>
-            <p>Software Engineer Intern, <span class="place" style="color:yellowgreen">Codigo Semilla.</span> Web Development.</p>
+            <p>Software Engineer Intern, <span class="place" style="color:yellowgreen">Codigo Semilla.</span> Monterrey, Nuevo Leon, Mexico.</p>
              <ul class="description">
                 <li>Built most of the Front-End components of the landing page of the company’s Ruby on Rails web application with HTML, CSS and Bootstrap</li>
                 <li>Designed and wrote test scripts for the development of a new app in Ruby on Rails utilizing test-driven development with Rspec</li>
