added design more grid css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <title>
       Diana Barrios's Resume
@@ -7,91 +8,107 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
+    <div id="container">
       <header>
         <h1>Diana Barrios</h1>
         <adddres>
-            <a href="mailto:dianabarriosmacias@gmail.com">dianabarriosmacias@gmail.com</a> <br>
-            Bachilleres #103, Colonia Tecnologico, 64700 <br>
-            +52 664 309 5119 <br>
+          <a href="mailto:dianabarriosmacias@gmail.com">dianabarriosmacias@gmail.com</a> <br>
+          Bachilleres #103, Colonia Tecnologico, 64700 <br>
+          +52 664 309 5119 <br>
         </adddres>
       </header>
 
-    <main>
-      <section>
-        <h3>Objective</h3>
-        <p>To change the world one line of code at a time.</p>
-      </section>
+        <section id="objective">
+          <h3>Objective</h3>
+          <p>To change the world one line of code at a time.</p>
+        </section>
 
-      <section>
-        <h3>Experience</h3>
-        
-        <article>
-            <h5 class="date">February 2020 - present</h5>
-            <p>Software Engineer, <span class="place" style="color:purple">Emissary.</span> Monterrey, Nuevo Leon, Mexico.</p>
-            <ul class="description">
+        <section id="experience">
+            <h3>Experience</h3>
+  
+            <article>
+              <h5 class="date">February 2020 - present</h5>
+              <p>Software Engineer, <span class="place" style="color:purple">Emissary.</span> Monterrey, Nuevo Leon, Mexico.
+              </p>
+              <ul class="description">
                 <li>Working with: JavaScript, Flexbox, CSS Grid, JQuery</li>
-            </ul>
-        </article>
-
-
-        <article>
-            <h5 class="date">May 2019 - July 2019</h5>
-            <p>Software Engineer, <span class="place" style="color:darkblue">Digital Product School.</span> Munich, Bavaria, Germany.</p>
-            <ul class="description">
+              </ul>
+            </article>
+  
+  
+            <article>
+              <h5 class="date">May 2019 - July 2019</h5>
+              <p>Software Engineer, <span class="place" style="color:darkblue">Digital Product School.</span> Munich,
+                Bavaria, Germany.</p>
+              <ul class="description">
                 <li>Designed, developed and deployed the web application using React, NodeJS and Cloud Services</li>
                 <li>Integrated sending emails to users using MailChimp API and Nodemailer</li>
-                <li>Collaborated with the interaction designer and product managers in my team on the journey from the problem validation with user research and testing to the product in a fast-paced agile methodology</li>  
-            </ul>
-        </article>
+                <li>Collaborated with the interaction designer and product managers in my team on the journey from the
+                  problem validation with user research and testing to the product in a fast-paced agile methodology</li>
+              </ul>
+            </article>
+  
+            <article>
+              <h5 class="date">Septemner 2018 - January 2019</h5>
+              <p>Software Engineer Intern, <span class="place" style="color:rgb(160, 219, 41)">Codigo Semilla.</span>
+                Monterrey, Nuevo Leon, Mexico.</p>
+              <ul class="description">
+                <li>Built most of the Front-End components of the landing page of the company’s Ruby on Rails web
+                  application with HTML, CSS and Bootstrap</li>
+                <li>Designed and wrote test scripts for the development of a new app in Ruby on Rails utilizing test-driven
+                  development with Rspec</li>
+                <li>Contributed in continuous integration and deployment by making pull request using Git and GitHub</li>
+              </ul>
+            </article>
+          </section>
 
-        <article>
-            <h5 class="date">Septemner 2018 - January 2019</h5>
-            <p>Software Engineer Intern, <span class="place" style="color:yellowgreen">Codigo Semilla.</span> Monterrey, Nuevo Leon, Mexico.</p>
-             <ul class="description">
-                <li>Built most of the Front-End components of the landing page of the company’s Ruby on Rails web application with HTML, CSS and Bootstrap</li>
-                <li>Designed and wrote test scripts for the development of a new app in Ruby on Rails utilizing test-driven development with Rspec</li>
-                <li>Contributed in continuous integration and deployment by making pull request using Git and GitHub</li>  
-            </ul>
-        </article>
+        <section id="education">
+          <h3>Education</h3>
 
-      </section>
-
-      <section>
-        <h3>Education</h3>
-
-        <div>
+          <div>
             <h5 class="date">2016-present</h5>
-            <p>B.A. Computer Science from <span class="place" style="color:blue">Monterrey Institute of Technology and Higher Education</span></p>
-        </div>
-        
-        <div>
+            <p>B.A. Computer Science from <span class="place" style="color:blue">Monterrey Institute of Technology and
+                Higher Education</span></p>
+          </div>
+
+          <div>
             <h5 class="date">2013-2016</h5>
-            <p> International Baccalaureate Diploma from <span class="place"  style="color:orange">CETYS Universidad</span></p>
-        </div>
+            <p> International Baccalaureate Diploma from <span class="place" style="color:orange">CETYS Universidad</span>
+            </p>
+          </div>
 
-      </section>
+        </section>
 
-      <section>
-        <h3>Interests</h3>
-        <ul>
+        <section id="interests">
+          <h3>Interests</h3>
+          <ul>
             <li>Travel</li>
             <li>Fashion</li>
             <li>Cinema</li>
             <li>History</li>
             <li>Mathematics</li>
-        </ul>
-      </section>
-    </main>
+          </ul>
+        </section>
 
-    <footer>
-    <h2>More about me...</h2>
-            <img src="./assets/innout.png" id="profile" alt="Diana's picture"/>
-            <nav>
-                <a href="https://github.com/DianaBarrios">GitHub</a> |
-                <a href="https://www.linkedin.com/in/diana-barrios/">LinkedIn</a> |
-                <a href="https://twitter.com/dianabmacias">Twitter</a> 
-            </nav>
-    </footer>
+      <div id="photo">
+        <img src="./assets/innout.png" id="profile" alt="Diana's picture" />
+      </div>
+
+      <div id="nav">
+        <h2>Follow me...</h2>
+        <nav>
+          <a href="https://github.com/DianaBarrios">GitHub</a> |
+          <a href="https://www.linkedin.com/in/diana-barrios/">LinkedIn</a> |
+          <a href="https://twitter.com/dianabmacias">Twitter</a>
+        </nav>
+      </div>
+
+      <footer>
+
+      </footer>
+    </div>
   </body>
+
 </html>
