--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   
             <article>
               <h5 class="date">Septemner 2018 - January 2019</h5>
-              <p>Software Engineer Intern, <span class="place" style="color:rgb(160, 219, 41)">Codigo Semilla.</span>
+              <p>Software Engineer Intern, <span class="place" style="color:green">Codigo Semilla.</span>
                 Monterrey, Nuevo Leon, Mexico.</p>
               <ul class="description">
                 <li>Built most of the Front-End components of the landing page of the company’s Ruby on Rails web
