--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
               <p>Software Engineer, <span class="place" style="color:purple">Emissary.</span> Monterrey, Nuevo Leon, Mexico.
               </p>
               <ul class="description">
-                <li>Working with: JavaScript, Flexbox, CSS Grid, JQuery</li>
+                <li>Designing and implementing a web app migration to Angular of the company’s platform used by more than 100 users</li>
+                <li>Analyzing the web app requirements and interaction between components to develop reusable components and interfaces</li>
+                <li>Creating modular and responsive templates using HTML, custom CSS, Bootstrap and JavaScript</li>
               </ul>
             </article>
   
@@ -86,9 +88,11 @@
           <ul>
             <li>Travel</li>
             <li>Fashion</li>
-            <li>Cinema</li>
+            <li>Feminism</li>
+            <li>Techno</li>
             <li>History</li>
             <li>Mathematics</li>
+            <li>Photography</li>
           </ul>
         </section>
 
